Fixing IOS inconsistency, placing a hidden icon in portal for first icon flicker removal, minor responsive improvements

--- a/client/src/app/core/components/header/components/header-logo/header-logo.component.scss
+++ b/client/src/app/core/components/header/components/header-logo/header-logo.component.scss
@@ -104,3 +104,8 @@
     transform: translateX(0.04em);
   }
 }
+@supports (-webkit-touch-callout: none) {
+  #logo-text-container {
+    gap: 7px;
+  }
+}
