--- a/client/src/app/features/portal/components/register/register.component.scss
+++ b/client/src/app/features/portal/components/register/register.component.scss
@@ -138,7 +138,7 @@
     transform: translateX(-5em) scale(0.8);
   }
   #gender-input-container {
-    margin-right: 0;
+    margin-right: 0.6em;
   }
   .date-picker-container {
     width: 30em;
